--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,6 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compileOnly('org.projectlombok:lombok')
+    compile 'org.thymeleaf:thymeleaf-spring5:3.0.9.RELEASE'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
