--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compileOnly('org.projectlombok:lombok')
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
     compile 'org.thymeleaf:thymeleaf-spring5:3.0.9.RELEASE'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
